--- a/src/main/resources/templates/studentUploadForm.html
+++ b/src/main/resources/templates/studentUploadForm.html
@@ -23,9 +23,10 @@
 	</div>
 	<form action="#" data-th-action="@{/sort}" data-th-object="${model}" method="post">
 		<button type="submit" name="action" value="sort">sort</button>
-
 	</form>
-
+	<form action="#" data-th-action="@{/reset}" data-th-object="${model}" method="post">
+		<button type="submit" name="action" value="reset">reset</button>
+	</form>
 
 
 	<div>Students</div>
