added some tests, yet major cleaning to be done

--- a/src/main/resources/templates/studentUploadForm.html
+++ b/src/main/resources/templates/studentUploadForm.html
@@ -39,6 +39,18 @@
 			</li>
 		</ul>
 	</div>
+    <table>
+			<tr>
+				<th>Name</th>
+				<br>
+				<th>Score</th>
+			</tr>
+		<tr th:each="student : ${students}">
+			<td th:text="${student.name}"></td>
+			<br>
+			<td th:text="${student.rating}"></td>
+		</tr>
+	</table>
 
 </body>
 </html>
