--- a/src/main/resources/templates/studentUploadForm.html
+++ b/src/main/resources/templates/studentUploadForm.html
@@ -61,7 +61,7 @@
 		<button type="submit" name="action" value="reset">Save to file</button>
 	</form>
 
-	<h1>File of sorted students</h1>
+	<h1>Files of sorted students</h1>
 
 	<div>
 		<ul>
